lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: http
      nodePort: 32120
  selector:
    app: front
