lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - example.com
      secretName: ingress-tls
  rules:
    - host: example.com
      http:
        paths:
          - pathType: Prefix
            path: /front
            backend:
              service:
                name: front
                port:
                  number: 80
